--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,14 +7,14 @@
         </div>
         <div class="container d-flex" style="align-items: center;justify-content: center;">
           <form action="/login" method="post" class="d-flex" style="flex-direction: column;justify-content: center;">
-            <label class="text-white mb-1"  for="username">User_Name</label>
+            <label class="text-white mb-1"  for="username">username</label>
             <div class="box-input" style="max-width: 30vw;">
               <input class="form-control" name="username" type="text">
             </div>
             <br>
             <label class="text-white mb-1" for="password">Password</label> 
             <div class="box-input" style="max-width: 30vw;">
-              <input class="form-control" name="password" type="text">
+              <input class="form-control" name="password" type="password">
             </div>
             <br>
             <button type="submit" class="btn btn-primary">Log-In</button>
